@@ -1,6 +1,7 @@
 
 package org.openlca.ilcd.commons;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -60,7 +61,7 @@ public class Category implements Copyable<Category> {
 	public Map<QName, String> getOtherAttributes() {
 		return otherAttributes != null
 			? otherAttributes
-			: Map.of();
+			: Collections.emptyMap();
 	}
 
 	// endregion
